# 2DRPG

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_Web.md  build_web.sh  start_game.bat  start_game.sh
.github/workflows/: build.yml
SlimesSkyTravel/.cursor/rules/: a.md
assets/: IMAGE_GUIDE.md
assets/config/: ui_config.json
assets/saves/: autosave.json
cursor/: a.md
src/: Battle.cpp  Battle.h  BattleState.cpp  BattleState.h  CastleState.cpp  CastleState.h  Character.cpp  Character.h  CommonUI.cpp  CommonUI.h  DemonCastleState.cpp  DemonCastleState.h  EndingState.cpp  EndingState.h  Enemy.cpp  Enemy.h  Equipment.cpp  Equipment.h  FieldState.cpp  FieldState.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  GameUtils.h  Graphics.cpp  Graphics.h  InputManager.cpp  InputManager.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  MainMenuState.cpp  MainMenuState.h  MapTerrain.cpp  NightState.cpp  NightState.h  Player.cpp  Player.h  (+10 more)
src/app/: main_sdl.cpp
src/core/: AudioManager.cpp  AudioManager.h  Battle.cpp  Battle.h  GameState.cpp  GameState.h  GameUtils.h  SDL2Game.cpp  SDL2Game.h
src/core/utils/: ui_config_manager.cpp  ui_config_manager.h
src/entities/: Character.cpp  Character.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h  PlayerStats.cpp  PlayerStats.h  PlayerStory.cpp  PlayerStory.h  PlayerTrust.cpp  PlayerTrust.h
src/game/: BattleAnimationController.cpp  BattleAnimationController.h  BattleConstants.h  BattleEffectManager.cpp  BattleEffectManager.h  BattleLogic.cpp  BattleLogic.h  BattlePhaseManager.cpp  BattlePhaseManager.h  BattleState.cpp  BattleState.h  BattleUI.cpp  BattleUI.h  CastleState.cpp  CastleState.h  DemonCastleState.cpp  DemonCastleState.h  EndingState.cpp  EndingState.h  FieldState.cpp  FieldState.h  GameOverState.cpp  GameOverState.h  MainMenuState.cpp  MainMenuState.h  NightState.cpp  NightState.h  RoomState.cpp  RoomState.h  TownState.cpp  TownState.h
src/gfx/: Graphics.cpp  Graphics.h
src/io/: InputManager.cpp  InputManager.h
src/items/: Equipment.cpp  Equipment.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  ItemFactory.cpp  ItemFactory.h
src/ui/: CommonUI.cpp  CommonUI.h  UI.cpp  UI.h
src/utils/: MapTerrain.cpp  MapTerrain.h  TownLayout.cpp  TownLayout.h
